[gd_scene load_steps=5 format=3 uid="uid://cdwvtbtwmrqbn"]

[ext_resource type="PackedScene" uid="uid://vh1ucj2rfbby" path="res://Scenes/OptionsMenu/OptionsMenu.tscn" id="1"]
[ext_resource type="Script" path="res://Scenes/PauseMenu/PauseMenu.gd" id="2"]
[ext_resource type="Theme" path="res://Themes/BaseTheme.tres" id="2_wxnmy"]
[ext_resource type="PackedScene" uid="uid://doj1dmgtf0a71" path="res://Scenes/UI/SoundButton/SoundButton.tscn" id="4"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("2")
main_menu_scene = "res://Scenes/MainMenu/MainMenu.tscn"

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_wxnmy")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 24

[node name="ResumeButton" parent="Control/MarginContainer/VBoxContainer/MenuButtons" instance=ExtResource("4")]
layout_mode = 2
text = "Resume"

[node name="RestartButton" parent="Control/MarginContainer/VBoxContainer/MenuButtons" instance=ExtResource("4")]
layout_mode = 2
text = "Restart"

[node name="OptionsButton" parent="Control/MarginContainer/VBoxContainer/MenuButtons" instance=ExtResource("4")]
layout_mode = 2
text = "Options"

[node name="MainMenuButton" parent="Control/MarginContainer/VBoxContainer/MenuButtons" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
text = "Return to Main Menu"

[node name="ExitButton" parent="Control/MarginContainer/VBoxContainer/MenuButtons" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
text = "Exit Game"

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SubMenuContainer" type="VBoxContainer" parent="Control/CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="OptionsMenu" parent="Control/CenterContainer/SubMenuContainer" instance=ExtResource("1")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/SubMenuContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="Control/CenterContainer/SubMenuContainer/HBoxContainer"]
layout_mode = 2
text = "back"

[node name="ConfirmRestart" type="ConfirmationDialog" parent="Control"]
unique_name_in_owner = true
dialog_text = "Restart the game?"

[node name="ConfirmMainMenu" type="ConfirmationDialog" parent="Control"]
unique_name_in_owner = true
dialog_text = "Go back to main menu?"

[node name="ConfirmExit" type="ConfirmationDialog" parent="Control"]
unique_name_in_owner = true
dialog_text = "Quit the game?"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/MenuButtons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/MenuButtons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/MenuButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/MenuButtons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/SubMenuContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="confirmed" from="Control/ConfirmRestart" to="." method="_on_confirm_restart_confirmed"]
[connection signal="confirmed" from="Control/ConfirmMainMenu" to="." method="_on_confirm_main_menu_confirmed"]
[connection signal="confirmed" from="Control/ConfirmExit" to="." method="_on_confirm_exit_confirmed"]
